force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <label>Log Entry</label>
    <nameField>
        <label>Log Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>