force-app/main/default/objects/Log__c/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <label>Entity Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>